--- a/index_new2.html
+++ b/index_new2.html
@@ -11,7 +11,7 @@
 
 <div id="container0" style="border: 1px dotted #000 ;  width:500px; height: 60px; margin: 0px auto"></div>
 <div id="container" style="border: 1px dotted #000 ;  width:500px; height: 360px;margin: 0px auto"></div>
-<div id="properties" style="border: 1px dotted #000 ;  width:500px; height: 60px;margin: 0px auto;"></div>
+<div id="resultat" style="border: 1px dotted #000 ;  width:500px; height: 60px;margin: 0px auto;"></div>
 
 <script data-main="main" src="require.js"></script>
 </body>
