--- a/index_new2.html
+++ b/index_new2.html
@@ -14,5 +14,17 @@
 <div id="resultat" style="border: 1px dotted #000 ;  width:500px; height: 60px;margin: 0px auto;"></div>
 
 <script data-main="main" src="require.js"></script>
+
+<script>
+    document.addEventListener('keydown', function(event){
+        if(event.keyCode == 90 && event.ctrlKey){
+            PREV();
+        }
+        if(event.keyCode == 89 && event.ctrlKey){
+            NEXT();
+        }
+    }, false);
+
+</script>
 </body>
 </html>
