Теперь можно некоторые примеры запомниать  - пока в памяти браузера Signed-off-by: Алмаз <almaz73@ya.ru>

--- a/index_new2.html
+++ b/index_new2.html
@@ -12,10 +12,14 @@
 <div id="container0" style="border: 1px dotted #000 ;  width:500px; height: 60px; margin: 0px auto"></div>
 <div id="container" style="border: 1px dotted #000 ;  width:500px; height: 360px;margin: 0px auto"></div>
 <div id="resultat" style="border: 1px dotted #000 ;  width:500px; height: 60px;margin: 0px auto;"></div>
+<div id="variants" style="border: 1px dotted #000 ;  width:500px; height: 60px;margin: 0px auto;"></div>
 
 <script data-main="main" src="require.js"></script>
 
 <script>
+
+
+
     document.addEventListener('keydown', function(event){
         if(event.keyCode == 90 && event.ctrlKey){
             PREV();
